fix(responsive): adjust font size on mobile

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -48,19 +48,28 @@
 
 .staticText {
   margin: 0;
-  font-size: 3rem;
-  color: #fff;
+  font-size: 1.2rem;
+  color: var(--text--secondary);
 }
 
 .typingAnimation {
-  font-size: 6rem;
+  font-size: 3rem;
   display: inline-block;
-  color: #fff;
-  border-right: 2px solid #fff;
+  color: var(--text--secondary);
+  border-right: 2px solid var(--text--secondary);
   white-space: nowrap;
   overflow: hidden;
   animation: typing 7s steps(15, end) infinite,
     blink-caret 0.5s step-end infinite;
+}
+
+@media (min-width: 768px) {
+  .staticText {
+    font-size: 2rem;
+  }
+  .typingAnimation {
+    font-size: 6rem;
+  }
 }
 
 @keyframes typing {
@@ -78,6 +87,6 @@
     border-color: transparent;
   }
   50% {
-    border-color: #fff;
+    border-color: var(--text--secondary);
   }
 }
